Re-design About Page * Added about me, services offered, and call to action to About Page * Removed profile image banner in About Page * Fixed card section spacing in Contact Page * Changed Learn More button in Home Page to redirect to About Page * Added double spacing of p tags as a global style

--- a/assets/scss/_global_styles.scss
+++ b/assets/scss/_global_styles.scss
@@ -3,6 +3,9 @@ $color-secondary: #77c9d4;
 $color-primary-bg: rgb(50, 50, 50);
 $color-secondary-bg: #E3DFDB;
 
+p {
+  line-height: 2em;
+}
 a {
   color: $color-primary;
 }
